Refactor commands using cloudframework