@@ -22,7 +22,6 @@ package me.moros.bending.ability.air;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
 
 import me.moros.atlas.configurate.CommentedConfigurationNode;
 import me.moros.bending.Bending;
@@ -117,7 +116,7 @@ public class AirBreath extends AbilityInstance {
 
   @Override
   public @NonNull Collection<@NonNull Collider> colliders() {
-    return streams.stream().map(ParticleStream::collider).collect(Collectors.toList());
+    return streams.stream().map(ParticleStream::collider).toList();
   }
 
   private class AirStream extends ParticleStream {
