@@ -24,7 +24,6 @@ import java.util.Collection;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
 
 import me.moros.atlas.configurate.CommentedConfigurationNode;
 import me.moros.bending.Bending;
@@ -129,7 +128,7 @@ public class FrostBreath extends AbilityInstance {
 
   @Override
   public @NonNull Collection<@NonNull Collider> colliders() {
-    return streams.stream().map(ParticleStream::collider).collect(Collectors.toList());
+    return streams.stream().map(ParticleStream::collider).toList();
   }
 
   private class FrostStream extends ParticleStream {
